fix gaps between buttons

--- a/datacenter.css
+++ b/datacenter.css
@@ -19,7 +19,7 @@
 main {
   box-sizing: border-box;
   display: flex;
-  gap: 1vw;
+  gap: 0.6rem;
   height: 82vh;
   padding: 1vw;
   width: 100%;
@@ -242,7 +242,7 @@ li.excluded > span:not(.checkmark):not(:first-child) {
 
   display: grid;
   grid-template-rows: 1fr 1fr;
-  gap: 1vh;
+  gap: 0.6rem;
 }
 #asset-chart,
 #liability-chart {
@@ -255,6 +255,7 @@ li.excluded > span:not(.checkmark):not(:first-child) {
 /* Chart Download */
 #download-button-container {
   align-items: center;
+  gap: 0.6rem;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
